perf(code quality): 代码质量优化